--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # data files
 *.csv
+*.xlsx
+*.xls
+*.odf
+*.ods
+*.zip
 *.p
+*.txt
 
 # image and output files
 .png
@@ -12,6 +18,7 @@
 # database connection files
 geoproj_aws_db.ini
 silverstone_db.ini
+nomis.ini
 
 # input data folders
 input data/
